#442 at-form-lookup paper-like default css - Fixed the spacing issue - Fixed the "value not updating" issue - selectOnTab issue is pending review

--- a/css/at-form-lookup-default.css
+++ b/css/at-form-lookup-default.css
@@ -215,7 +215,7 @@
   .selectize-dropdown [data-selectable] {
     margin-left: 12px;
     margin-right: 12px;
-    padding: 0.9em 1em;
+    padding: 0.7em 1em;
   }
 
 .selectize-dropdown .optgroup-header {
